[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bbtc client"
version = "0.2.0"
description = "BBTC client for TCAT devices"
authors = ["Piotr Jasinski <piotr.jasinski@nordicsemi.no>", "Esko Dijk <esko.dijk@iotconsultancy.nl>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9.0 || >3.9.0,<3.9.1 || >3.9.1,<4.0"
bleak = "^0.20.2"
pytest ="^7.1.2"
cryptography = "^45.0.7"

[tool.poetry.dev-dependencies]
